--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,8 @@ gitlive = "2.1.0"
 firebase = "33.2.0"
 gms = "4.4.2"
 crashlytics-plugin = "3.0.2"
-koalaplot = "0.8.0" # https://github.com/KoalaPlot/koalaplot-core https://koalaplot.github.io/docs/
+koalaplot = "0.8.0"
+material3Android = "1.3.1" # https://github.com/KoalaPlot/koalaplot-core https://koalaplot.github.io/docs/
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -65,6 +66,7 @@ koin-android = { module = "io.insert-koin:koin-android" }
 # https://kotlinlang.org/docs/multiplatform-add-dependencies.html#kotlinx-libraries
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "ktx-serialization" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "ktx-serialization" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
