--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,14 +4,9 @@ android-compileSdk = "34"
 android-minSdk = "26"
 android-targetSdk = "34"
 androidx-activityCompose = "1.9.3" # https://developer.android.com/jetpack/androidx/releases/activity
-androidx-appcompat = "1.7.0" # https://developer.android.com/jetpack/androidx/releases/appcompat
-androidx-core-ktx = "1.13.1" # https://developer.android.com/jetpack/androidx/releases/core
-androidx-espresso-core = "3.6.1" # https://developer.android.com/jetpack/androidx/releases/test
 androidx-lifecycle = "2.8.3"
-androidx-test-junit = "1.2.1"
 compose-multiplatform = "1.7.3"
 material3-adaptive = "1.0.1"
-junit = "4.13.2"
 kotlin = "2.1.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-datetime = "0.6.0"
@@ -24,28 +19,20 @@ gms = "4.4.2"
 crashlytics-plugin = "3.0.2"
 koalaplot = "0.8.0"
 material3Android = "1.3.1" # https://github.com/KoalaPlot/koalaplot-core https://koalaplot.github.io/docs/
+gitfit = "0.9.2"
+gitfitVersionCode = "7" # this version code should be incremented for every single AAB that is uploaded to Google Play console
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core-ktx" }
-androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
-kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines"}
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
 
 # adaptive layouts can be used in common module
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/whats-new-compose-170.html#new-common-modules
 material3-adaptive = { group = "org.jetbrains.compose.material3.adaptive", name = "adaptive", version.ref = "material3-adaptive" }
-material3-adaptive-layout = { group = "org.jetbrains.compose.material3.adaptive", name = "adaptive-layout", version.ref = "material3-adaptive" }
-material3-adaptive-navigation = { group = "org.jetbrains.compose.material3.adaptive", name = "adaptive-navigation", version.ref = "material3-adaptive" }
-material3-windowSizeClass = { group = "org.jetbrains.compose.material3", name = "material3-window-size-class", version.ref = "compose-multiplatform" }
 
 koalaplot = { group = "io.github.koalaplot", name = "koalaplot-core", version.ref = "koalaplot" }
 
@@ -57,11 +44,9 @@ gitlive-firebase-crashlytics = { group = "dev.gitlive", name = "firebase-crashly
 # https://insert-koin.io/docs/reference/koin-compose/compose
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
-koin-test = { module = "io.insert-koin:koin-test" }
 koin-compose = { module = "io.insert-koin:koin-compose" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel" }
 koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation" }
-
 
 # required for android related APIs
 koin-android = { module = "io.insert-koin:koin-android" }
