--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,56 +5,56 @@ android-minSdk = "26"
 android-targetSdk = "34"
 androidx-activityCompose = "1.9.3" # https://developer.android.com/jetpack/androidx/releases/activity
 androidx-lifecycle = "2.8.3"
-compose-multiplatform = "1.7.3"
+compose-multiplatform = "1.7.3" # https://github.com/JetBrains/compose-multiplatform
 material3-adaptive = "1.0.1"
 kotlin = "2.1.0"
 kotlinx-coroutines = "1.9.0"
 kotlinx-datetime = "0.6.0"
-koin-bom = "4.0.0"
-ktx-serialization = "1.7.3"
+koin-bom = "4.0.0" # https://insert-koin.io/docs/reference/koin-compose/compose
+ktx-serialization = "1.7.3" # https://kotlinlang.org/docs/multiplatform-add-dependencies.html#kotlinx-libraries
 ktlint = "12.1.2"
-gitlive = "2.1.0"
+gitlive = "2.1.0" # https://github.com/GitLiveApp/firebase-kotlin-sdk
 firebase = "33.2.0"
 gms = "4.4.2"
 crashlytics-plugin = "3.0.2"
-koalaplot = "0.8.0"
-material3Android = "1.3.1" # https://github.com/KoalaPlot/koalaplot-core https://koalaplot.github.io/docs/
+koalaplot = "0.8.0" # https://github.com/KoalaPlot/koalaplot-core https://koalaplot.github.io/docs/
+material3Android = "1.3.1"
 gitfit = "0.9.2"
 gitfitVersionCode = "7" # this version code should be incremented for every single AAB that is uploaded to Google Play console
 
 [libraries]
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
 # adaptive layouts can be used in common module
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/whats-new-compose-170.html#new-common-modules
 material3-adaptive = { group = "org.jetbrains.compose.material3.adaptive", name = "adaptive", version.ref = "material3-adaptive" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
+# Data visualization
 koalaplot = { group = "io.github.koalaplot", name = "koalaplot-core", version.ref = "koalaplot" }
 
-firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
-gitlive-firebase-firestore = { group = "dev.gitlive", name = "firebase-firestore", version.ref = "gitlive" }
-gitlive-firebase-auth = { group = "dev.gitlive", name = "firebase-auth", version.ref = "gitlive" }
-gitlive-firebase-crashlytics = { group = "dev.gitlive", name = "firebase-crashlytics", version.ref = "gitlive" }
-
-# https://insert-koin.io/docs/reference/koin-compose/compose
+# Dependency injection
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
+koin-android = { module = "io.insert-koin:koin-android" }
 koin-compose = { module = "io.insert-koin:koin-compose" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel" }
 koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation" }
 
-# required for android related APIs
-koin-android = { module = "io.insert-koin:koin-android" }
-
-# https://kotlinlang.org/docs/multiplatform-add-dependencies.html#kotlinx-libraries
+# Serialization to and from Firebase documents
 kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "ktx-serialization" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "ktx-serialization" }
-androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+
+# Authentication, online synchronization and crash reporting
+firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
+gitlive-firebase-firestore = { group = "dev.gitlive", name = "firebase-firestore", version.ref = "gitlive" }
+gitlive-firebase-auth = { group = "dev.gitlive", name = "firebase-auth", version.ref = "gitlive" }
+gitlive-firebase-crashlytics = { group = "dev.gitlive", name = "firebase-crashlytics", version.ref = "gitlive" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
